--- a/index.html
+++ b/index.html
@@ -4,3 +4,4 @@
 
 my name is Alina
 <iframe width="560" height="315" src="https://www.youtube.com/embed/rRzxEiBLQCA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&width=147&layout=button_count&action=like&size=large&show_faces=true&share=true&height=46&appId" width="147" height="46" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
