--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 #hello
 #mynameisamy
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14459.147525820155!2d121.43048449999999!3d25.0413056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a87e314c3835%3A0x253ab83f6a58457c!2z6buD5Z-O5YWs5ZyS!5e0!3m2!1szh-TW!2stw!4v1515043337041" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+<div style="width:300px;border:1px solid #999;position:relative">
+  <div style="height:0;padding-bottom:50%">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14459.147525820155!2d121.43048449999999!3d25.0413056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a87e314c3835%3A0x253ab83f6a58457c!2z6buD5Z-O5YWs5ZyS!5e0!3m2!1szh-TW!2stw!4v1515043337041"
+    width="100%" height="100%" frameborder="0"
+    style="border:0;position:absolute" allowfullscreen></iframe>
+  </div>
+</div>
 
 my name is Alina
 <iframe width="560" height="315" src="https://www.youtube.com/embed/rRzxEiBLQCA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
